syntax = "proto3";

package techschool.pcbook.go;

option go_package = ".;pb";
option java_package = "github.com.techscrool.pcbook.java.pb";
option java_multiple_files = true;

import "memory_message.proto";

message Filter {
  double max_price_usd = 1;
  uint32 min_cpu_cores = 2;
  double min_cpu_ghz = 3;
  Memory min_ram = 4;
}
